--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@
   --primary: #000000;
   --light-primary: #3B3551;
   --orange: #FF6B00;
+  --light-orange: 255, 107, 0;
   --green: #90D272;
   --secondary: #A0A0A0;
   --light-secondary: #6F7F95;
   --red: #EB6A6A;
-  --grey: #6B6B6B;
+  --gray: #6B6B6B;
+  --light-gray: #EBEBEB;
   --white: #FFFFFF;
+  --light-white: #FAFAFA;
 }
 
 *, body, p, ul, li {
@@ -15,6 +18,15 @@
   margin: 0;
   font-family: 'Manrope', sans-serif;
   font-size: 0.875rem;
+  box-sizing: border-box;
+}
+
+body {
+  background: var(--light-white);
+}
+
+table {
+  border-collapse: collapse;
 }
 
 li {
@@ -77,12 +89,17 @@ a {
   width: 50%;
 }
 
+.w-33_33 {
+  width: 33.33%
+}
+
 .flex-column {
   flex-direction: column;
 }
 
 aside {
-  width: 17.5rem;
+  width: 21.5rem;
+  background: var(--white);
 }
 
 .nav {
@@ -143,6 +160,10 @@ main {
   padding-left: 3rem;
 }
 
+.pr-6 {
+  padding-right: 6rem;
+}
+
 .py-1 {
   padding-block: 1rem;
 }
@@ -179,6 +200,10 @@ main {
   margin-top: 4rem;
 }
 
+.my-1 {
+  margin-block: 1rem;
+}
+
 .my-2 {
   margin-block: 2rem;
 }
@@ -194,6 +219,12 @@ main {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
   grid-auto-flow: column;
+  gap: 2rem;
+}
+
+.card {
+  border-radius: 0.625rem;
+  background: var(--white);
 }
 
 .card-title {
@@ -209,6 +240,10 @@ main {
   height: 10.5rem;
 }
 
+.right-border {
+  border-right: 1px solid var(--light-gray);
+}
+
 .font-size-1 {
   font-size: 1rem;
 }
@@ -216,8 +251,9 @@ main {
 th, td {
   text-align: left;
   padding-block: 1rem;
-  color: var(--grey);
+  color: var(--gray);
   font-weight: 600;
+  border-bottom: 1px solid var(--light-gray);
 }
 
 .text-right {
@@ -227,12 +263,24 @@ th, td {
 .pagination a {
   padding-inline: 1rem;
   padding-block: 0.5rem;
-  color: var(--grey);
-}
-
-.pagination a:hover, .pagination a.active {
-  background: var(--orange);
-  color: var(--white);
+  color: var(--gray);
   border: none;
   border-radius: 0.3rem;
+}
+
+.pagination a.active {
+  background: var(--orange);
+  color: var(--white);
+}
+
+.pagination a:hover {
+  background: var(--light-gray);
+}
+
+.tag {
+  color: var(--orange);
+  padding: 0.2rem 1rem;
+  display: inline-block;
+  background: rgba(var(--light-orange), 0.1);
+  border-radius: 0.5rem;
 }
